[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["Alex Scott <calexscott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
